--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -7,8 +7,6 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-        with:
-          submodules: false # 关掉可能有问题的子模块
 
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
@@ -16,13 +14,15 @@ jobs:
           channel: 'stable'
 
       - name: Get dependencies
+        working-directory: ./simple_live_app
         run: flutter pub get
 
       - name: Build APK
+        working-directory: ./simple_live_app
         run: flutter build apk --release --no-tree-shake-icons
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
           name: SimpleLive-APK
-          path: build/app/outputs/flutter-apk/app-release.apk
+          path: simple_live_app/build/app/outputs/flutter-apk/app-release.apk
