--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -8,6 +8,13 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      # 关键步骤：强制指定 Java 11 环境，解决 Kotlin 转型报错
+      - name: Set up JDK 11
+        uses: actions/setup-java@v4
+        with:
+          java-version: '11'
+          distribution: 'temurin'
+
       - name: Setup Flutter
         uses: subosito/flutter-action@v2
         with:
