--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -8,11 +8,11 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # 关键步骤：强制指定 Java 11 环境，解决 Kotlin 转型报错
-      - name: Set up JDK 11
+      # 升回 Java 17 以满足插件强制要求
+      - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
-          java-version: '11'
+          java-version: '17'
           distribution: 'temurin'
 
       - name: Setup Flutter
@@ -26,7 +26,11 @@ jobs:
 
       - name: Build APK
         working-directory: ./simple_live_app
-        run: flutter build apk --release --no-tree-shake-icons
+        # 核心修复：手动注入版本环境变量，防止 Kotlin 转型失败
+        env:
+          APP_VERSION: "1.0.0"
+          BUILD_NUMBER: "1"
+        run: flutter build apk --release --no-tree-shake-icons --no-pub
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
