--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -8,7 +8,6 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      # 升回 Java 17 以满足插件强制要求
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
@@ -26,14 +25,13 @@ jobs:
 
       - name: Build APK
         working-directory: ./simple_live_app
-        # 核心修复：手动注入版本环境变量，防止 Kotlin 转型失败
-        env:
-          APP_VERSION: "1.0.0"
-          BUILD_NUMBER: "1"
-        run: flutter build apk --release --no-tree-shake-icons --no-pub
+        # 使用 debug 模式彻底绕过签名验证
+        run: flutter build apk --debug --no-tree-shake-icons --no-pub
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
           name: SimpleLive-APK
-          path: simple_live_app/build/app/outputs/flutter-apk/app-release.apk
+          # 路径必须对应 debug 文件名
+          path: simple_live_app/build/app/outputs/flutter-apk/app-debug.apk
+
