--- a/.github/workflows/build-android.yml
+++ b/.github/workflows/build-android.yml
@@ -1,21 +1,17 @@
-name: Build Android APK
+name: Build Multi-Platform Release
 on: workflow_dispatch
 
 jobs:
-  build:
+  # 安卓编译部分
+  build-android:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
-
-      - name: Setup Flutter
-        uses: subosito/flutter-action@v2
+      - uses: subosito/flutter-action@v2
         with:
           channel: 'stable'
 
@@ -23,17 +19,39 @@ jobs:
         working-directory: ./simple_live_app
         run: flutter pub get
 
-      - name: Build APK
+      - name: Build Android Release
         working-directory: ./simple_live_app
-        # 核心调整：针对 Note20 Ultra 优化
-        # --debug: 继续避开签名崩溃
-        # --split-per-abi: 为不同架构生成独立包，减少安装识别错误
-        # --obfuscate: 略微改变包体结构，使其更像正常应用
-        run: flutter build apk --debug --split-per-abi --no-tree-shake-icons --no-pub
+        # 切换为 release 模式，彻底去掉 DEBUG 标志
+        run: flutter build apk --release --split-per-abi --no-tree-shake-icons --no-pub
 
-      - name: Upload APK
+      - name: Upload Android APK
         uses: actions/upload-artifact@v4
         with:
-          name: SimpleLive-Samsung-Edition
-          # 仅提取最适合你手机的 arm64-v8a 版本
-          path: simple_live_app/build/app/outputs/flutter-apk/app-arm64-v8a-debug.apk
+          name: SimpleLive-Samsung-Note20-Pure
+          path: simple_live_app/build/app/outputs/flutter-apk/app-arm64-v8a-release.apk
+
+  # Windows 编译部分（需要运行在 Windows 虚拟机上）
+  build-windows:
+    runs-on: windows-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: subosito/flutter-action@v2
+        with:
+          channel: 'stable'
+
+      - name: Enable Windows support
+        run: flutter config --enable-windows-desktop
+
+      - name: Get dependencies
+        working-directory: ./simple_live_app
+        run: flutter pub get
+
+      - name: Build Windows Release
+        working-directory: ./simple_live_app
+        run: flutter build windows --release
+
+      - name: Upload Windows EXE
+        uses: actions/upload-artifact@v4
+        with:
+          name: SimpleLive-Lenovo-Windows
+          path: simple_live_app/build/windows/x64/runner/Release/
