--- a/.github/workflows/private-aliyun.yml
+++ b/.github/workflows/private-aliyun.yml
@@ -14,7 +14,6 @@ jobs:
         with:
           channel: 'stable'
 
-      # 自动生成签名文件（Plan B 逻辑）
       - name: Generate Keystore
         run: |
           keytool -genkey -v -keystore simple_live_app/android/app/upload-keystore.jks -keyalg RSA -keysize 2048 -validity 10000 -alias upload -storepass 123456 -keypass 123456 -dname "CN=Unknown, OU=Unknown, O=Unknown, L=Unknown, ST=Unknown, C=Unknown"
@@ -30,12 +29,12 @@ jobs:
           flutter build apk --release --split-per-abi --no-tree-shake-icons --no-pub
 
       - name: Upload Android to Aliyun
-        uses: justjavac/aliyunpan-action@v1
+        # 修正后的插件路径
+        uses: imndp/aliyunpan-action@v1
         with:
-          refresh_token: ${{ secrets.ALIYUN_REFRESH_TOKEN }}
-          upload_path: simple_live_app/build/app/outputs/flutter-apk/app-arm64-v8a-release.apk
-          # 锁定上传到你的隔离文件夹
-          remote_dir: /Github_Artifacts/Android
+          refreshToken: ${{ secrets.ALIYUN_REFRESH_TOKEN }}
+          uploadPath: simple_live_app/build/app/outputs/flutter-apk/app-arm64-v8a-release.apk
+          remoteDir: /Github_Artifacts/Android
 
   build-windows:
     runs-on: windows-latest
@@ -52,16 +51,15 @@ jobs:
           flutter pub get
           flutter build windows --release
 
-      - name: Zip and Upload Windows to Aliyun
+      - name: Zip Windows Package
         shell: pwsh
         run: |
           Compress-Archive -Path simple_live_app/build/windows/x64/runner/Release/* -DestinationPath Windows_Release.zip
       
-      - name: Run Aliyun Upload (Windows)
-        uses: justjavac/aliyunpan-action@v1
+      - name: Upload Windows to Aliyun
+        # 修正后的插件路径
+        uses: imndp/aliyunpan-action@v1
         with:
-          refresh_token: ${{ secrets.ALIYUN_REFRESH_TOKEN }}
-          upload_path: ./Windows_Release.zip
-          # 锁定上传到你的隔离文件夹
-          remote_dir: /Github_Artifacts/Windows
-
+          refreshToken: ${{ secrets.ALIYUN_REFRESH_TOKEN }}
+          uploadPath: ./Windows_Release.zip
+          remoteDir: /Github_Artifacts/Windows
