--- a/.github/workflows/private-aliyun.yml
+++ b/.github/workflows/private-aliyun.yml
@@ -1,8 +1,9 @@
-name: Lanzou and Release Sync
+name: Ultimate Smart Release
 on: workflow_dispatch
 
 jobs:
   build:
+    name: Build and Deploy
     strategy:
       matrix:
         include:
@@ -17,10 +18,10 @@ jobs:
         with:
           channel: 'stable'
 
+      # --- 编译 Android ---
       - name: Build Android
         if: matrix.platform == 'android'
         run: |
-          # 签名与编译逻辑
           keytool -genkey -v -keystore simple_live_app/android/app/upload-keystore.jks -keyalg RSA -keysize 2048 -validity 10000 -alias upload -storepass 123456 -keypass 123456 -dname "CN=Unknown"
           echo "storePassword=123456" > simple_live_app/android/key.properties
           echo "keyPassword=123456" >> simple_live_app/android/key.properties
@@ -29,6 +30,7 @@ jobs:
           cd simple_live_app && flutter pub get && flutter build apk --release --no-tree-shake-icons
           mv build/app/outputs/flutter-apk/app-release.apk ../SimpleLive-Android.apk
 
+      # --- 编译 Windows ---
       - name: Build Windows
         if: matrix.platform == 'windows'
         run: |
@@ -38,7 +40,8 @@ jobs:
           flutter build windows --release
           Compress-Archive -Path build/windows/x64/runner/Release/* -DestinationPath ../SimpleLive-Windows.zip
 
-      - name: Create Release
+      # --- 1. 存入 GitHub Releases (所有文件) ---
+      - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
           tag_name: v1.0.${{ github.run_number }}
@@ -49,21 +52,41 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Upload to Lanzou (Android Only)
-        if: matrix.platform == 'android'
+      # --- 2. 智能秤重上传蓝奏云 ---
+      - name: Smart Upload to Lanzou
+        shell: bash
         env:
           LANZOU_COOKIE: ${{ secrets.LANZOU_COOKIE }}
         run: |
           pip install lanzou-api
           python -c "
-          from lanzou.api import LanzouCloud
           import os
-          lanzou = LanzouCloud()
-          # 使用你抓到的 ylogin 登录
-          if lanzou.login_by_cookie(os.environ['LANZOU_COOKIE']) == LanzouCloud.SUCCESS:
-              # -1 代表上传到根目录。如果你想传到特定文件夹，把 -1 改为你的文件夹 ID
-              res = lanzou.upload_file('SimpleLive-Android.apk', -1)
-              print(f'SUCCESS: Lanzou link is {res.full_address}')
-          else:
-              print('FAILURE: Could not login to Lanzou')
+          from lanzou.api import LanzouCloud
+          
+          def smart_upload(file_name):
+              if not os.path.exists(file_name):
+                  return
+              
+              # 获取文件大小 (MB)
+              file_size = os.path.getsize(file_name) / (1024 * 1024)
+              print(f'--- 正在检查文件: {file_name} ---')
+              print(f'文件大小: {file_size:.2f} MB')
+              
+              if file_size > 99:
+                  print(f'⚠️ 警告: {file_name} 超过蓝奏云 100MB 限制，已跳过上传。')
+                  print('💡 请前往仓库首页的 Releases 区域下载此文件。')
+              else:
+                  lanzou = LanzouCloud()
+                  if lanzou.login_by_cookie(os.environ['LANZOU_COOKIE']) == LanzouCloud.SUCCESS:
+                      # 上传至根目录 (-1)
+                      res = lanzou.upload_file(file_name, -1)
+                      print(f'✅ 上传成功！蓝奏云链接: {res.full_address}')
+                  else:
+                      print('❌ 登录失败: 请检查 LANZOU_COOKIE 是否有效。')
+
+          # 自动检测并处理所有成品
+          if os.path.exists('SimpleLive-Android.apk'):
+              smart_upload('SimpleLive-Android.apk')
+          if os.path.exists('SimpleLive-Windows.zip'):
+              smart_upload('SimpleLive-Windows.zip')
           "
