--- a/.github/workflows/private-aliyun.yml
+++ b/.github/workflows/private-aliyun.yml
@@ -19,7 +19,7 @@ jobs:
         with:
           channel: 'stable'
 
-      # --- 1. 安卓端：专为三星 Note20 Ultra (Arm64) 优化 ---
+      # --- 1. 安卓端优化：专为三星 Note20 Ultra (Arm64) 编译 ---
       - name: Build Android
         if: matrix.platform == 'android'
         run: |
@@ -29,7 +29,7 @@ jobs:
           echo "keyAlias=upload" >> simple_live_app/android/key.properties
           echo "storeFile=upload-keystore.jks" >> simple_live_app/android/key.properties
           cd simple_live_app && flutter pub get 
-          # 只编译 arm64 架构，大幅瘦身以适配蓝奏云限制
+          # 仅编译 arm64 架构，确保体积低于蓝奏云限制
           flutter build apk --release --target-platform android-arm64 --no-tree-shake-icons
           mv build/app/outputs/flutter-apk/app-release.apk ../SimpleLive-Note20U-Arm64.apk
 
@@ -43,29 +43,32 @@ jobs:
           flutter build windows --release
           Compress-Archive -Path build/windows/x64/runner/Release/* -DestinationPath ../SimpleLive-Lenovo-Air13.zip
 
-      # --- 3. 第一备份：发布到 GitHub Release ---
+      # --- 3. 基础发布：将成品存入 GitHub Releases ---
       - name: Create GitHub Release
         uses: softprops/action-gh-release@v2
         with:
           tag_name: v1.3.${{ github.run_number }}
-          name: "Precise Build v1.3.${{ github.run_number }}"
+          name: "Optimized Build v1.3.${{ github.run_number }}"
           files: |
             *.apk
             *.zip
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      # --- 4. 第二发布：智能秤重并上传蓝奏云 (带重试逻辑) ---
+      # --- 4. 智能上传：蓝奏云分发（带重试与编码修正） ---
       - name: Smart Upload to Lanzou
         shell: bash
         env:
           LANZOU_COOKIE: ${{ secrets.LANZOU_COOKIE }}
+          PYTHONIOENCODING: utf-8
         run: |
           pip install lanzou-api
           python -c "
-          import os, lanzou.api, time
+          import os, lanzou.api, time, sys
           
-          # 自动匹配库类名
+          # 强制指定输出编码，防止 Windows 端编码报错
+          sys.stdout.reconfigure(encoding='utf-8') if hasattr(sys.stdout, 'reconfigure') else None
+          
           LanzouClass = getattr(lanzou.api, 'LanZouCloud', getattr(lanzou.api, 'LanzouCloud', None))
           
           def smart_upload(file_name):
@@ -74,26 +77,24 @@ jobs:
               print(f'\n[Checking] {file_name} - Size: {file_size:.2f} MB')
               
               if file_size > 99:
-                  print(f'⚠️ 文件超过100MB，跳过蓝奏云，请在GitHub Release中下载。')
+                  print(f'Warning: File too large for Lanzou. Check GitHub Releases instead.')
               else:
                   lanzou_instance = LanzouClass()
                   cookie_val = os.environ['LANZOU_COOKIE']
                   
-                  # 针对海外服务器网络波动，尝试3次重试
                   for attempt in range(3):
                       print(f'Attempt {attempt+1}: Logging in...')
-                      # 修正字典传参，适配 ylogin
                       login_res = lanzou_instance.login_by_cookie({'ylogin': cookie_val})
                       
                       if login_res == LanzouClass.SUCCESS:
                           print('Login success, uploading...')
                           res = lanzou_instance.upload_file(file_name, -1)
                           if res:
-                              print(f'✅ SUCCESS! Link: {res.full_address}')
+                              print(f'SUCCESS! Link: {res.full_address}')
                               return
-                      print(f'⚠️ Attempt {attempt+1} failed (Code: {login_res}), retrying in 5s...')
+                      print(f'Attempt {attempt+1} failed (Code: {login_res}). Retrying...')
                       time.sleep(5)
-                  print(f'❌ 经过3次尝试，{file_name} 依然无法上传蓝奏云。')
+                  print(f'Error: Could not upload {file_name} after 3 attempts.')
 
           if LanzouClass:
               for f in os.listdir('.'):
